# Parallel_Computing_Circles_Painting_C

./: README.md
Project_circle_pixels/: CMakeLists.txt  MyCircle.h  Utils.h  main.cpp  pixel_parallel.h  pixel_parallel_layers2.h  pixel_seq.h
